--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "ractive": "~0.3.9",
     "marked": "~0.3.0",
     "grunt-spelunk": "~0.1.0"
+  },
+  "scripts": {
+    "deploy": "./deploy-to-gh-pages.sh"
   }
 }
