--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: node_js
 node_js:
  - "0.10"
-script: npm run-script build; npm run-script deploy
+ before_script:
+ - npm install -g grunt-cli
+ - chmod u+x deploy-to-gh-pages.sh
+script: ./deploy-to-gh-pages.sh
 env:
  global:
   - GH_REF: github.com/RactiveJS/docs.ractivejs.org.git
