--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: node_js
 node_js:
  - "0.10"
  before_script:
- - npm install -g grunt-cli
- - chmod u+x deploy-to-gh-pages.sh
+ - npm install -g grunt-cli; grunt build; chmod u+x deploy-to-gh-pages.sh
 script: ./deploy-to-gh-pages.sh
 env:
  global:
