--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "ractive": "~0.3.9",
     "marked": "~0.3.0",
-    "assemble": "~0.4.36"
+    "assemble": "~0.4.36",
+    "grunt-newer": "~0.6.1"
   }
 }
