--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "ractive": "~0.3.9",
     "marked": "~0.3.0",
     "assemble": "~0.4.36",
-    "grunt-newer": "~0.6.1"
+    "grunt-newer": "~0.6.1",
+    "jit-grunt": "~0.3.2",
+    "grunt-spelunk": "~0.1.0"
   }
 }
