--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
   "author": "Rich Harris",
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-contrib-sass": "~0.6.0",
-    "grunt-dir2json": "~0.1.5",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-watch": "~0.5.3",
-    "ractive": "~0.3.9",
     "marked": "~0.3.0",
     "assemble": "~0.4.36",
     "grunt-newer": "~0.6.1",
     "jit-grunt": "~0.3.2",
-    "grunt-spelunk": "~0.1.0"
+    "grunt-sass": "~0.12.1"
   }
 }
