--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "docs.ractivejs.org",
   "author": "Rich Harris",
   "devDependencies": {
+    "assemble": "~0.4.36",
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-watch": "~0.5.3",
-    "marked": "~0.3.0",
-    "assemble": "~0.4.36",
     "grunt-newer": "~0.6.1",
+    "grunt-sass": "^1.0.0",
     "jit-grunt": "~0.3.2",
-    "grunt-sass": "~0.12.1"
+    "marked": "~0.3.0"
   }
 }
