--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "grunt-newer": "~0.6.1",
     "grunt-sass": "^1.0.0",
     "jit-grunt": "~0.3.2",
-    "marked": "~0.3.0"
+    "marked": "~0.3.0",
+    "surge": "^0.17.2"
+  },
+  "scripts": {
+    "build": "grunt build",
+    "predeploy": "npm run build",
+    "deploy": "surge build docs.ractivejs.org"
   }
 }
