--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "docs.ractivejs.org",
   "author": "Rich Harris",
+  "version": "0.8.0",
   "devDependencies": {
     "assemble": "~0.4.36",
     "grunt": "~0.4.2",
