--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "grunt-newer": "~0.6.1",
     "grunt-sass": "^1.0.0",
     "jit-grunt": "~0.3.2",
-    "marked": "~0.3.0",
+    "prismjs": "^1.3.0",
     "surge": "^0.17.2"
   },
   "scripts": {
